@@ -4,15 +4,19 @@
     <string id="30000">VGTV</string>
 
     <!-- Main menu items -->
-    <string id="30001">Siste</string>
-    <string id="30002">Mest sett</string>
-    <string id="30003">Søk</string>
+    <string id="30001">Utvalgte</string>
+    <string id="30002">Serier</string>
+    <string id="30003">Nyheter</string>
+    <string id="30004">Dokumentarer</string>
+    <string id="30005">Mest sett</string>
+    <string id="30006">Kategorier</string>
+    <string id="30007">Live</string>
+    <string id="30008">Søk</string>
 
     <!-- Pagination -->
-    <string id="30004">Forrige side</string>
-    <string id="30005">Neste side</string>
+    <string id="30009">Forrige side</string>
+    <string id="30010">Neste side</string>
 
     <!-- Search context -->
-    <string id="30006">Fjern fra historikk</string>
-
+    <string id="30011">Fjern fra historikk</string>
 </strings>
